# ai-paper-demos

./: README.md
Files/: mythos-sentiment-observatory.html  omnigent-demo.html
Files/livetranslatebench/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Files/livetranslatebench/config/: benchmark.yaml  languages.yaml
Files/livetranslatebench/data/: README.md
Files/livetranslatebench/livetranslatebench/: __init__.py  audio.py  cli.py  harness.py  leaderboard.py
Files/livetranslatebench/livetranslatebench/metrics/: __init__.py  latency.py  quality.py  wer.py
Files/livetranslatebench/livetranslatebench/systems/: __init__.py  base.py  cascade.py  gemini_live.py  seamless.py
Files/livetranslatebench/space/: README.md  app.py  requirements.txt
Files/livetranslatebench/web/: README.md  index.html  leaderboard.sample.json
